<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"
        app:showAsAction="always" />
    <item
        android:id="@+id/mark"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/mark"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/cancel"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/cancel"
        app:showAsAction="always" />
    <item
        android:id="@+id/edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add"
        app:showAsAction="always"></item>
</menu>